tests/outref/TERR024.ref

-- TERR024 : OCTO483 : Issue error when CREATE TABLE DELIM list contains non-integers

-- No VARCHARs as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM ('hello') GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 'world') GLOBAL "^delimnames(keys(""id""))";

-- No NUMERICs as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (3.14) GLOBAL "^delimnames(keys(""ID""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 3.14) GLOBAL "^delimnames(keys(""ID""))";

-- No BOOLEANs as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (true) GLOBAL "^delimnames(keys(""ID""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, true) GLOBAL "^delimnames(keys(""ID""))";

-- No identifiers as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (hello) GLOBAL "^delimnames(keys(""ID""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, hello) GLOBAL "^delimnames(keys(""ID""))";

-- No functions as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (ABS(-1)) GLOBAL "^delimnames(keys(""ID""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, ABS(-1)) GLOBAL "^delimnames(keys(""ID""))";

[ERROR]: ERR_DDL_LITERAL: Invalid literal in DDL specification: only integer literals accepted for this keyword.
LINE 3:1: ...HAR(1), age INTEGER) DELIM ('hello') GLOBAL "^delimnames(keys("...
                                         ^^^^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM ('hello') GLOBAL "^delimnames(keys(""id""))";
[ERROR]: ERR_DDL_LITERAL: Invalid literal in DDL specification: only integer literals accepted for this keyword.
LINE 4:1: ...(1), age INTEGER) DELIM (9, 'world') GLOBAL "^delimnames(keys("...
                                         ^^^^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 'world') GLOBAL "^delimnames(keys(""id""))";
[ERROR]: ERR_DDL_LITERAL: Invalid literal in DDL specification: only integer literals accepted for this keyword.
LINE 6:1: ...RCHAR(1), age INTEGER) DELIM (3.14) GLOBAL "^delimnames(keys(""I...
                                           ^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (3.14) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_DDL_LITERAL: Invalid literal in DDL specification: only integer literals accepted for this keyword.
LINE 7:1: ...AR(1), age INTEGER) DELIM (9, 3.14) GLOBAL "^delimnames(keys(""I...
                                           ^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 3.14) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected TRUE_TOKEN, expecting LITERAL
LINE 9:1: ...RCHAR(1), age INTEGER) DELIM (true) GLOBAL "^delimnames(keys(""I...
                                           ^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (true) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected TRUE_TOKEN, expecting LITERAL
LINE 10:1: ...AR(1), age INTEGER) DELIM (9, true) GLOBAL "^delimnames(keys(""I...
                                            ^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, true) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
LINE 12:1: ...CHAR(1), age INTEGER) DELIM (hello) GLOBAL "^delimnames(keys(""...
                                           ^^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (hello) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
LINE 13:1: ...R(1), age INTEGER) DELIM (9, hello) GLOBAL "^delimnames(keys(""...
                                           ^^^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, hello) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
LINE 15:1: ...RCHAR(1), age INTEGER) DELIM (ABS(-1)) GLOBAL "^delimnames(keys...
                                            ^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (ABS(-1)) GLOBAL "^delimnames(keys(""ID""))";
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
LINE 16:1: ...AR(1), age INTEGER) DELIM (9, ABS(-1)) GLOBAL "^delimnames(keys...
                                            ^^^
OCTO> CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, ABS(-1)) GLOBAL "^delimnames(keys(""ID""))";
OCTO> 
